syntax="proto3";

option csharp_namespace = "OpenFlier.Plugin";

enum PluginType {
    TYPE_UNSPECIFIED = 0;
    MQTT_SERVICE_PLUGIN = 1;
    COMMAND_INPUT_PLUGIN = 2;
}

message PluginFile {
    string filename = 1;
    bytes file_data = 2;
    bool is_plugin_main = 3;
}

message SinglePluginPackage {
    PluginType plugin_type = 1;
    string plugin_name = 2;
    string plugin_author = 3;
    string plugin_identifier = 4;
    string plugin_version = 5;
    string plugin_description = 6;
    string requested_minimum_openflier_version = 7;
    int32 mqtt_message_type = 8;
    repeated string command_input_caller_names = 9;
    bool plugin_need_config_entry = 10;
    repeated File files = 11;
}

message PluginCollection {
    string collection_name = 1;
    string collection_description = 2;
    repeated SinglePluginPackage plugins = 3;
}